# trilat_node

./: CMakeLists.txt  package.xml
launch/: orbit_prediction.launch  short_distance_sim.launch
msg/: receiver.msg  satMeasurement.msg  satMeasurementArray.msg
src/: orbit_prediction_main.cpp  orbit_prediction_node.cpp  orbit_prediction_node.h  receiver_sim_main.cpp  receiver_sim_node.cpp  receiver_sim_node.h  rinex_reader_main.cpp  rinex_reader_node.cpp  rinex_reader_node.h  trilat_main.cpp  trilat_node.cpp  trilat_node.h  trilateration_main.cpp  trilateration_node.cpp  trilateration_node.h
src/old/: trilat_main.cpp  trilat_node.h
