<?xml version="1.0"?>
<package>
  <name>trilateration</name>
  <version>0.0.0</version>
  <description>The trilateration package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <maintainer email="pier.tirindelli@gmail.com">Pier Tirindelli</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>BSD</license>

  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>visualization_msgs</run_depend>


</package>
